style(next)/floating buttons/backlink counter: fix the dropdown not showing up

--- a/src/public/stylesheets/theme-next/shell.css
+++ b/src/public/stylesheets/theme-next/shell.css
@@ -1305,7 +1305,6 @@ div.promoted-attribute-cell .multiplicity:has(span) {
  /* Floating buttons container */
 div#center-pane .floating-buttons-children {
     opacity: 1;
-    overflow: hidden;
     transform-origin: right;
     box-shadow: 1px 1px 1px var(--floating-button-shadow-color);
     background: var(--floating-button-background-color);
@@ -1324,6 +1323,10 @@ div#center-pane .floating-buttons-children {
 }
 
 /* Floating buttons */
+
+.floating-buttons-children {
+    --border-radius-size: 6px;
+}
 
 .floating-buttons-children > * {
     margin: 0 !important;
@@ -1350,6 +1353,12 @@ div.floating-buttons-children .floating-button:hover {
 div.floating-buttons-children > button:active,
 div.floating-buttons-children .floating-button:active {
     font-size: calc(var(--floating-button-icon-size) * 0.85);
+}
+
+/* The first visible floating button */
+div.floating-buttons-children > *:nth-child(1 of .visible) {
+    --border-radius: var(--border-radius-size) 0 0 var(--border-radius-size);
+    border-radius: var(--border-radius);
 }
 
  /* "Show / hide floating buttons" buttons */
@@ -1409,8 +1418,9 @@ div.floating-buttons-children:not(.temporarily-hidden) .close-floating-buttons-b
     animation: floating-buttons-show-hide-button-animation 400ms ease-out;
 }
 
-div.floating-buttons-children .close-floating-buttons-button {
-    border-radius: 0;
+div.floating-buttons-children .close-floating-buttons {
+    border-radius: 0 var(--border-radius-size) var(--border-radius-size) 0;
+    overflow: hidden;
 }
 
 div.floating-buttons-children .close-floating-buttons {
@@ -1434,7 +1444,7 @@ div.floating-buttons-children .close-floating-buttons:has(.close-floating-button
     user-select: none;
 }
 
-.floating-buttons .backlinks-ticker:has(.backlinks-count:hover) {
+.floating-buttons .backlinks-widget:hover {
     background: var(--floating-button-hover-background);
 }
 
